# aws-internal-commucation-exploration

./: .editorconfig  .gitignore
app/: app.py  pyproject.toml
infrastructure/: alb_external.tf  alb_internal.tf  api_gateway.tf  fargate.tf  lambda_main.tf  security_group.tf  vpc.tf
